# scripts-rs

./: Cargo.toml  check-battery.nix  flake.nix  home-manager.nix  install.sh  notify-failure.nix
ip_check/: Cargo.toml
src/: battery.rs  git.rs  lib.rs  log.rs  notif.rs
