[package]
name = "script-lib"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "bin/*" ]

[dependencies]
# multi
lazy_static = { version = "^1", optional = true }
# logging
log = { version = "^0.4", optional = true }
fern = { version = "^0.6", optional = true }
termion = { version = "^1", optional = true }
time = { version = "^0.3", features = ["formatting", "local-offset", "macros"], optional = true }
# battery
regex = { version = "^1", optional = true }
serde = { version = "^1", features = ["derive"], optional = true }
# git
thiserror = { version = "^1", optional = true }
git2 = { version = "^0.13", optional = true }

[features]
default = []
logging = [ "time", "log", "fern", "lazy_static", "termion" ]
notif = [ "lazy_static" ]
battery = [ "serde", "regex", "lazy_static", "log" ]
git = [ "git2", "thiserror" ]
